--- a/index.html
+++ b/index.html
@@ -1,43 +1,416 @@
 <!DOCTYPE html>
-<html lang="FR">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Les bêtas testeurs</title>
+    <title>CV ESGI B1</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
+	<!-- CSS  -->
+   <link rel="stylesheet" href="css/default.css">
+  <link rel="stylesheet" href="css/layout.css">
+   <link rel="stylesheet" href="css/media-queries.css">
+   <link rel="stylesheet" href="css/magnific-popup.css">
+
 </head>
 <body>
-    <section id="liste">
 
-    <h1 class="titre">
-    <u>Liste des sites internet</u> :
-    </h1>
+<section id="portfolio">
 
-    <h2 class="sousTitre">
-    <pre>*Cliquez sur les boutons pour voir leurs sites web*</pre>
-    </h2>
+    <div class="row">
 
-    <br> <br>
+        <div class="twelve columns collapsed">
 
-    <h3>
-    <ul>
-    <li><a href="https://www.je-code.com/esgi1/hberleur/cvHtml/">Hugo BER</a></li>
-    <li><a href="https://www.je-code.com/esgi1/mboureau2/page/">Mattys BOU</a></li>
-    <li><a href="https://www.je-code.com/esgi1/adavid28/">Achille DAV</a></li>
-    <li><a href="https://www.je-code.com/esgi1/jderache/">Julien DER</a></li>
-    <li><a href="https://www.je-code.com/esgi1/hdoom/site/">Hugo DOO</a></li>
-    <li><a href="https://www.je-code.com/esgi1/tdusautoir/cv/">Thibaut DUS</a></li>
-    <li><a href="https://www.je-code.com/esgi1/eelkihel/">Elias ELK</a></li>
-    <li><a href="https://www.je-code.com/esgi1/efontaine8/">Erwan FON</a></li>
-    <li><a href="https://www.je-code.com/esgi1/qgransart/cours/">Quentin GRA</a></li>
-    <li><a href="https://www.je-code.com/esgi1/atruffier/CV/">Aurélien TRU</a></li>
-    <li><a href="https://www.je-code.com/esgi1/bkhemissi1/cv/">Bahya KHE</a></li>
-    <li><a href="https://www.je-code.com/esgi1/avekemans/">Anaël VEK</a></li>
-    </ul>
-    </h3>
+           <h1>Liste des CV : </h1>
 
-    </section>
+           <div id="portfolio-wrapper" class="bgrid-quarters s-bgrid-thirds cf">
+
+              <div class="columns portfolio-item">
+                 <div class="item-wrap hugo">
+
+                    <a href="#modal-01" title="">
+                       <img alt="" src="images/portfolio/hberleur.jpg">
+                       <div class="overlay">
+                          <div class="portfolio-item-meta">
+                             <h5>Hugo BERLEUR</h5>
+                          </div>
+                       </div>
+                       <div class="link-icon"><i class="icon-plus"></i></div>
+                    </a>
+
+                 </div>
+              </div>   
+
+              <div class="columns portfolio-item">
+                 <div class="item-wrap matthys">
+
+                    <a href="#modal-02" title="">
+                       <img alt="" src="images/portfolio/mboureau.jpg">
+                       <div class="overlay">
+                          <div class="portfolio-item-meta">
+                                   <h5>Matthys BOUREAU</h5>
+                                </div>
+                       </div>
+                       <div class="link-icon"><i class="icon-plus"></i></div>
+                    </a>
+                 </div>
+           </div>
+
+              <div class="columns portfolio-item">
+                 <div class="item-wrap achille">
+
+                    <a href="#modal-03" title="">
+                       <img alt="" src="images/portfolio/adavid.jpg">
+                       <div class="overlay">
+                          <div class="portfolio-item-meta">
+                             <h5>Achille DAVID</h5>
+                          </div>
+                       </div>
+                       <div class="link-icon"><i class="icon-plus"></i></div>
+                    </a>
+
+                 </div>
+              </div>  
+
+              <div class="columns portfolio-item">
+                 <div class="item-wrap julien">
+
+                    <a href="#modal-04" title="images/portfolio/eleve.jpg">
+                       <img alt="" src="images/portfolio/jderache.jpg">
+                       <div class="overlay">
+                          <div class="portfolio-item-meta">
+                             <h5>Julien DERACHE</h5>
+                          </div>
+                       </div>
+                       <div class="link-icon"><i class="icon-plus"></i></div>
+                    </a>
+
+                 </div>
+              </div>
+
+              <div class="columns portfolio-item">
+                 <div class="item-wrap hugod">
+
+                    <a href="#modal-05" title="images/portfolio/eleve.jpg">
+                       <img alt="" src="images/portfolio/hdoom.jpg">
+                       <div class="overlay">
+                          <div class="portfolio-item-meta">
+                             <h5>Hugo DOOM</h5>
+                          </div>
+                       </div>
+                       <div class="link-icon"><i class="icon-plus"></i></div>
+                    </a>
+
+                 </div>
+              </div>
+
+              <div class="columns portfolio-item">
+                 <div class="item-wrap thibaut">
+
+                    <a href="#modal-06" title="images/portfolio/eleve.jpg">
+                       <img alt="" src="images/portfolio/tdusautoir.jpg">
+                       <div class="overlay">
+                          <div class="portfolio-item-meta">
+                             <h5>Thibaut DUSAUTOIR</h5>
+                          </div>
+                       </div>
+                       <div class="link-icon"><i class="icon-plus"></i></div>
+                    </a>
+
+                 </div>
+              </div>
+
+              <div class="columns portfolio-item">
+                 <div class="item-wrap elias">
+
+                    <a href="#modal-07" title="images/portfolio/eleve.jpg">
+                       <img alt="" src="images/portfolio/eleve.jpg">
+                       <div class="overlay">
+                          <div class="portfolio-item-meta">
+                             <h5>Elias EL KIHEL</h5>
+                          </div>
+                       </div>
+                       <div class="link-icon"><i class="icon-plus"></i></div>
+                    </a>
+
+                 </div>
+              </div>
+
+              <div class="columns portfolio-item">
+                 <div class="item-wrap erwan">
+
+                    <a href="#modal-08" title="images/portfolio/eleve.jpg">
+                       <img alt="" src="images/portfolio/eleve.jpg">
+                       <div class="overlay">
+                          <div class="portfolio-item-meta">
+                             <h5>Erwan FONTAINE</h5>
+                          </div>
+                       </div>
+                       <div class="link-icon"><i class="icon-plus"></i></div>
+                    </a>
+
+                 </div>
+              </div>
+
+              <div class="columns portfolio-item">
+                 <div class="item-wrap quentin">
+
+                    <a href="#modal-09" title="images/portfolio/eleve.jpg">
+                       <img alt="" src="images/portfolio/eleve.jpg">
+                       <div class="overlay">
+                          <div class="portfolio-item-meta">
+                             <h5>Quentin GRANSART</h5>
+                          </div>
+                       </div>
+                       <div class="link-icon"><i class="icon-plus"></i></div>
+                    </a>
+
+                 </div>
+              </div>
+
+              <div class="columns portfolio-item">
+                 <div class="item-wrap aurelien">
+
+                    <a href="#modal-10" title="images/portfolio/eleve.jpg">
+                       <img alt="" src="images/portfolio/eleve.jpg">
+                       <div class="overlay">
+                          <div class="portfolio-item-meta">
+                             <h5>Aurélien TRUFFIER</h5>
+                             </div>
+                       </div>
+                       <div class="link-icon"><i class="icon-plus"></i></div>
+                    </a>
+
+                 </div>
+              </div>
+
+              <div class="columns portfolio-item">
+                 <div class="item-wrap bahya">
+
+                    <a href="#modal-11" title="images/portfolio/eleve.jpg">
+                       <img alt="" src="images/portfolio/eleve.jpg">
+                       <div class="overlay">
+                          <div class="portfolio-item-meta">
+                             <h5>Bahya KHEMISSI</h5>
+                          </div>
+                       </div>
+                       <div class="link-icon"><i class="icon-plus"></i></div>
+                    </a>
+
+                 </div>
+              </div>
+
+              <div class="columns portfolio-item">
+                 <div class="item-wrap anael">
+
+                    <a href="#modal-12" title="images/portfolio/eleve.jpg">
+                       <img alt="" src="images/portfolio/eleve.jpg">
+                       <div class="overlay">
+                          <div class="portfolio-item-meta">
+                             <h5>Anaël VEKEMANS</h5>
+                          </div>
+                       </div>
+                       <div class="link-icon"><i class="icon-plus"></i></div>
+                    </a>
+
+                 </div>
+              </div>  
+
+        </div>
+
+
+
+        <!-- Pop up  -->
+
+        <div id="modal-01" class="popup-modal mfp-hide">
+
+           <img class="scale-with-grid" src="images/portfolio/eleve.jpg" alt="" />
+
+           <div class="description-box">
+              <h4>Hugo BERLEUR</h4>
+              <p>En alternance chez</p>
+              <span class="categories"><i class="fa fa-tag"></i>Étudiant ESGI</span>
+           </div>
+
+           <div class="link-box">
+              <a href="" target="_blank"><i class="fa fa-download"></i>Télécharger CV</a>
+              <a class="popup-modal-dismiss">Fermer</a>
+           </div>
+        </div><!-- modal-01 Fin -->
+           
+        <div id="modal-02" class="popup-modal mfp-hide">
+
+             <img class="scale-with-grid" src="images/portfolio/eleve.jpg" alt="" />
+
+             <div class="description-box">
+                 <h4>Matthys BOUREAU</h4>
+                 <p>En alternance chez</p>
+              <span class="categories"><i class="fa fa-tag"></i>Étudiant ESGI</span>
+             </div>
+
+           <div class="link-box">
+              <a href="" target="_blank"><i class="fa fa-download"></i>Télécharger CV</a>
+              <a class="popup-modal-dismiss">Fermer</a>
+           </div><!-- modal-02 Fin -->
+
+           <div id="modal-03" class="popup-modal mfp-hide">
+
+           <img class="scale-with-grid" src="images/portfolio/eleve.jpg" alt="" />
+
+           <div class="description-box">
+              <h4>Achille DAVID</h4>
+              <p>À la recherche d'une alternance dans l'informatique.</p>
+              <span class="categories"><i class="fa fa-tag"></i>Étudiant ESGI</span>
+           </div>
+
+           <div class="link-box">
+              <a href="CV Achille DAVID.zip" target="_blank"><i class="fa fa-download"></i>Télécharger CV</a>
+              <a class="popup-modal-dismiss">Fermer</a>
+           </div><!-- modal-03 Fin -->
+
+           <div id="modal-04" class="popup-modal mfp-hide">
+
+           <img class="scale-with-grid" src="images/portfolio/eleve.jpg" alt="" />
+
+           <div class="description-box">
+              <h4>Julien DERACHE</h4>
+              <p>À la recherche d'une alternance dans l'informatique.</p>
+              <span class="categories"><i class="fa fa-tag"></i>Étudiant ESGI</span>
+           </div>
+
+           <div class="link-box">
+              <a href="" target="_blank"><i class="fa fa-download"></i>Télécharger CV</a>
+              <a class="popup-modal-dismiss">Fermer</a>
+           </div><!-- modal-04 Fin -->
+
+           <div id="modal-05" class="popup-modal mfp-hide">
+
+           <img class="scale-with-grid" src="images/portfolio/eleve.jpg" alt="" />
+
+           <div class="description-box">
+              <h4>Hugo DOOM</h4>
+              <p>À la recherche d'une alternance dans l'informatique.</p>
+              <span class="categories"><i class="fa fa-tag"></i>Étudiant ESGI</span>
+           </div>
+
+           <div class="link-box">
+              <a href="" target="_blank"><i class="fa fa-download"></i>Télécharger CV</a>
+              <a class="popup-modal-dismiss">Fermer</a>
+           </div><!-- modal-05 Fin -->
+
+           <div id="modal-06" class="popup-modal mfp-hide">
+
+           <img class="scale-with-grid" src="images/portfolio/eleve.jpg" alt="" />
+
+           <div class="description-box">
+              <h4>Thibaut DUSAUTOIR</h4>
+              <p>À la recherche d'une alternance dans l'informatique.</p>
+              <span class="categories"><i class="fa fa-tag"></i>Étudiant ESGI</span>
+           </div>
+
+           <div class="link-box">
+              <a href="" target="_blank"><i class="fa fa-download"></i>Télécharger CV</a>
+              <a class="popup-modal-dismiss">Fermer</a>
+           </div><!-- modal-06 Fin -->
+
+           <div id="modal-07" class="popup-modal mfp-hide">
+
+           <img class="scale-with-grid" src="images/portfolio/eleve.jpg" alt="" />
+
+           <div class="description-box">
+              <h4>Elias EL KIHEL</h4>
+              <p>À la recherche d'une alternance dans l'informatique.</p>
+              <span class="categories"><i class="fa fa-tag"></i>Étudiant ESGI</span>
+           </div>
+
+           <div class="link-box">
+              <a href="" target="_blank"><i class="fa fa-download"></i>Télécharger CV</a>
+              <a class="popup-modal-dismiss">Fermer</a>
+           </div><!-- modal-07 Fin -->
+
+           <div id="modal-08" class="popup-modal mfp-hide">
+
+           <img class="scale-with-grid" src="images/portfolio/eleve.jpg" alt="" />
+
+           <div class="description-box">
+              <h4>Erwan FONTAINE</h4>
+              <p>En formation initiale sans alternance.</p>
+              <span class="categories"><i class="fa fa-tag"></i>Étudiant ESGI</span>
+           </div>
+
+           <div class="link-box">
+              <a href="" target="_blank"><i class="fa fa-download"></i>Télécharger CV</a>
+              <a class="popup-modal-dismiss">Fermer</a>
+           </div><!-- modal-08 Fin -->
+
+           <div id="modal-09" class="popup-modal mfp-hide">
+
+           <img class="scale-with-grid" src="images/portfolio/eleve.jpg" alt="" />
+
+           <div class="description-box">
+              <h4>Quentin GRANSART</h4>
+              <p>En alternance chez</p>
+              <span class="categories"><i class="fa fa-tag"></i>Étudiant ESGI</span>
+           </div>
+
+           <div class="link-box">
+              <a href="" target="_blank"><i class="fa fa-download"></i>Télécharger CV</a>
+              <a class="popup-modal-dismiss">Fermer</a>
+           </div><!-- modal-09 Fin -->
+
+           <div id="modal-10" class="popup-modal mfp-hide">
+
+           <img class="scale-with-grid" src="images/portfolio/eleve.jpg" alt="" />
+
+           <div class="description-box">
+              <h4>Aurélien TRUFFIER</h4>
+              <p>En alternance chez</p>
+              <span class="categories"><i class="fa fa-tag"></i>Étudiant ESGI</span>
+           </div>
+
+           <div class="link-box">
+              <a href="" target="_blank"><i class="fa fa-download"></i>Télécharger CV</a>
+              <a class="popup-modal-dismiss">Fermer</a>
+           </div><!-- modal-10 Fin -->
+
+           <div id="modal-11" class="popup-modal mfp-hide">
+
+           <img class="scale-with-grid" src="images/portfolio/eleve.jpg" alt="" />
+
+           <div class="description-box">
+              <h4>Bhaya KHEMISSI</h4>
+              <p>À la recherche d'une alternance dans l'informatique.</p>
+              <span class="categories"><i class="fa fa-tag"></i>Étudiant ESGI</span>
+           </div>
+
+           <div class="link-box">
+              <a href="" target="_blank"><i class="fa fa-download"></i>Télécharger CV</a>
+              <a class="popup-modal-dismiss">Fermer</a>
+           </div><!-- modal-11 Fin -->
+
+           <div id="modal-12" class="popup-modal mfp-hide">
+
+           <img class="scale-with-grid" src="images/portfolio/eleve.jpg" alt="" />
+
+           <div class="description-box">
+              <h4>Anaël VEKEMANS</h4>
+              <p>À la recherche d'une alternance dans l'informatique.</p>
+              <span class="categories"><i class="fa fa-tag"></i>Étudiant ESGI</span>
+           </div>
+
+           <div class="link-box">
+              <a href="" target="_blank"><i class="fa fa-download"></i>Télécharger CV</a>
+              <a class="popup-modal-dismiss">Fermer</a>
+           </div><!-- modal-12 Fin -->
+
+</section>
+
+  <!-- JavaScript -->
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+
+  <script src="js/waypoints.js"></script>
+  <script src="js/magnific-popup.js"></script>
+  <script src="js/init.js"></script>
 
 </body>
 </html>
