--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <li><a href="https://www.je-code.com/esgi1/hberleur/cvHtml/">Hugo BER</a></li>
     <li><a href="https://www.je-code.com/esgi1/mboureau2/page/">Mattys BOU</a></li>
     <li><a href="https://www.je-code.com/esgi1/adavid28/">Achille DAV</a></li>
-    <li><a href="https://www.je-code.com/esgi1/jderache/">Julien DER</a></li>
+    <li><a href="https://www.je-code.com/esgi1/jderache/annuaire">Julien DER</a></li>
     <li><a href="https://www.je-code.com/esgi1/hdoom/site/">Hugo DOO</a></li>
     <li><a href="https://www.je-code.com/esgi1/tdusautoir/cv/">Thibaut DUS</a></li>
     <li><a href="https://www.je-code.com/esgi1/eelkihel/">Elias ELK</a></li>
