--- a/index.html
+++ b/index.html
@@ -1,43 +1,41 @@
 <!DOCTYPE html>
-<html lang="FR">
+<html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Les bêtas testeurs</title>
+	<meta charset="UTF-8">
+	<meta content="IE=edge" http-equiv="X-UA-Compatible">
+	<meta content="width=device-width, initial-scale=1.0" name="viewport">
+	<title>Les bêtas testeurs</title><!-- CSS -->
+	<link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <section id="liste">
-
-    <h1 class="titre">
-    <u>Liste des sites internet</u> :
-    </h1>
-
-    <h2 class="sousTitre">
-    <pre>*Cliquez sur les boutons pour voir leurs sites web*</pre>
-    </h2>
-
-    <br> <br>
-
-    <h3>
-    <ul>
-    <li><a href="https://www.je-code.com/esgi1/hberleur/cvHtml/">Hugo BER</a></li>
-    <li><a href="https://www.je-code.com/esgi1/mboureau2/page/">Mattys BOU</a></li>
-    <li><a href="https://www.je-code.com/esgi1/adavid28/">Achille DAV</a></li>
-    <li><a href="https://www.je-code.com/esgi1/jderache/">Julien DER</a></li>
-    <li><a href="https://www.je-code.com/esgi1/hdoom/site/">Hugo DOO</a></li>
-    <li><a href="https://www.je-code.com/esgi1/tdusautoir/cv/">Thibaut DUS</a></li>
-    <li><a href="https://www.je-code.com/esgi1/eelkihel/">Elias ELK</a></li>
-    <li><a href="https://www.je-code.com/esgi1/efontaine8/">Erwan FON</a></li>
-    <li><a href="https://www.je-code.com/esgi1/qgransart/cours/">Quentin GRA</a></li>
-    <li><a href="https://www.je-code.com/esgi1/atruffier/CV/">Aurélien TRU</a></li>
-    <li><a href="https://www.je-code.com/esgi1/bkhemissi1/cv/">Bahya KHE</a></li>
-    <li><a href="https://www.je-code.com/esgi1/avekemans/">Anaël VEK</a></li>
-    </ul>
-    </h3>
-
-    </section>
-
+	<!-- Navigation -->
+	<header class="header">
+		<nav class="menu">
+			<a href="admin/index.php">Aller vers l'espace Admin</a>
+		</nav>
+	</header><!-- Titre -->
+	<h1><span>Liste des CV :</span></h1><!-- Sous-Titre-->
+	<h2><span>Étudiants à l'<span class="Titre">ESGI</span> de Lille :</span></h2><!-- Liste des Étudiants -->
+	<center>
+		<div class="images">
+			<a href=""><img src="images/hberleur.jpg"></a> &nbsp; &nbsp; <a href=""><img src="images/mboureau.jpg"></a> &nbsp; &nbsp; <a href="cv/CV%20Achille%20DAVID.zip"><img src="images/adavid.jpg"></a><br>
+			<br>
+			<a href=""><img src="images/jderache.jpg"></a> &nbsp; &nbsp; <a href=""><img src="images/hdoom.jpg"></a> &nbsp; &nbsp; <a href=""><img src="images/tdusautoir.jpg"></a><br>
+			<br>
+			<a href=""><img src="images/eelkihel.jpg"></a> &nbsp; &nbsp; <a href=""><img src="images/eleve.jpg"></a> &nbsp; &nbsp; <a href=""><img src="images/eleve.jpg"></a><br>
+			<br>
+			<a href=""><img src="images/eleve.jpg"></a> &nbsp; &nbsp; <a href=""><img src="images/bkhemissi.jpg"></a> &nbsp; &nbsp; <a href=""><img src="images/eleve.jpg"></a>
+		</div>
+	</center><!-- Sous-Sous-Titre -->
+	<h3></h3>
+	<center>
+		<h3><span class="sous-titre">*Cliquez sur les images pour télécharger les CV*</span> </h3>
+	</center><br>
+	<br>
+	<footer class="footer">
+		<nav class="menu">
+			<a href="contact.php">Nous contacter</a>
+		</nav>
+	</footer>
 </body>
 </html>
